<resources>
    <string name="app_name">FishFric</string>
    <string name="title_activity_page_acceuil">PageAcceuil</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="bonjour">Bonjour !</string>
    <string name="toutEffacer">Tout effacer</string>
    <string name="noti">Notifications</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="courriel">Courriel :</string>
    <string name="connectez">Connectez-vous !</string>
    <string name="mail">Courriel :</string>
    <string name="fleche">←</string>
    <string name="connexion">Connexion</string>
    <string name="rester_connect">Rester connecté</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="oubli_votre_mot_de_passe">Oublié votre mot de passe ?</string>
    <string name="changez_le">Changez le</string>
    <string name="cr_er_compte">Créer compte</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe :</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prenom :</string>
    <string name="crabe">crabe</string>
    <string name="title_activity_demander_support">DemanderSupport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_deco">Déconnexion</string>
    <string name="companie">Fish&amp;Fric</string>
    <string name="transaction">Transaction</string>
    <string name="d_p_t">Dépôt</string>
    <string name="payer_une_facture">Payer une facture</string>
    <string name="effectuer_un_virement">Effectuer un virement</string>
    <string name="notifications">Notifications</string>
    <string name="vers_un_client">Vers un client</string>
    <string name="vers_un_compte">Vers un compte</string>
    <string name="support_nautico">Support Nautico</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bonjour_user">Bonjour [USER]</string>
    <string name="numero_de_compte"># de compte :</string>
    <string name="historique_des_transactions">Historique des transactions</string>
    <string name="compte">De:</string>
    <string name="envoyer">Envoyer</string>
    <string name="message">Message</string>
    <string name="titre">Titre</string>
    <string name="baleinesupport">BaleineSupport</string>
    <string name="title_activity_depot_cheque">DepotCheque</string>
    <string name="d_poser_un_ch_que">Déposer un chèque</string>

    <string name="compte_pargne">compte épargne</string>
    <string name="compte_ch_que">Compte chèque</string>
    <string name="carte_requin">Carte requin</string>
    <string name="transfert_entre_comptes">Transfert entre comptes</string>
    <string name="montant">Montant:</string>
    <string name="de">De:</string>
    <string name="vers">Vers:</string>
    <string name="question">Question</string>
    <string name="r_ponse">Réponse</string>
    <string name="virement_entre_particulier">Virement entre particuliers</string>
    <string name="tablissement">Établissement</string>
    <string name="num_ro_de_r_f_rence">Numéro de référence</string>
    <string name="paiement_de_facture">Paiement de facture</string>
    <string name="destinataire">Destinataire</string>


    <!--Pour l'activite de deposer un cheque-->
    <string name="recto">Recto manquant\n</string>
    <string name="verso">Verso manquant\n</string>
    <string name="photoInv">Photo Invalide</string>
    <string name="montantManquant">Montant manquant</string>
    <string name="montantInv">Les montants ne correspondent pas</string>
    <string name="depotSucces">Depot approuve!</string>
    <string name="soumettre">Soumettre</string>
    <string name="refuser">Refuser</string>
    <string name="reponse">Reponse</string>
    <string name="accepter">Accepter</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="f_licitation_vous_tes_a_2_coups_de_nageoires_de_rejoindre_le_banc_poissons">Félicitation, vous êtes à 2 coups de nageoires de rejoindre le banc poissons</string>
    <string name="fish_fric"><![CDATA[Fish&Fric]]></string>


</resources>