<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4361EE"
    tools:context=".PageAcceuil">

    <Button
        android:id="@+id/btnCreer"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#FFBC42"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/black"
        android:text="@string/cr_er_un_compte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnexion"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgRequin"
        android:layout_width="363dp"
        android:layout_height="366dp"
        android:contentDescription="Requin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:srcCompat="@drawable/requin_connexion"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textBonjour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/bonjour"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnConnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRequin"
        app:layout_constraintVertical_bias="0.818" />

    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:backgroundTint="#0496FF"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/black"
        android:text="@string/connectez_vous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRequin"
        app:layout_constraintVertical_bias="0.415" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/vous_n_avez_pas_de_compte"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCreer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnexion"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>