<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/headr_page_connexion"
    android:orientation="vertical"
    tools:context=".PageConnection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/editTextCourriel"
            android:layout_width="246dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/courriel"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.206" />

        <EditText
            android:id="@+id/editTextMdp"
            android:layout_width="246dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCourriel"
            app:layout_constraintVertical_bias="0.106" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:backgroundTint="#516CCA"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/connexion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="Rester Connecté"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextMdp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextMdp"
            app:layout_constraintTop_toBottomOf="@+id/editTextMdp"
            app:layout_constraintVertical_bias="0.23" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="302dp"
        android:layout_height="175dp"
        android:layout_above="@+id/constraintLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="-27dp"
        app:srcCompat="@drawable/dophinpopup" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/ic_retour" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/fish_fric"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

</RelativeLayout>